# symbolfit

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  LICENSE  MANIFEST.in  README.md  examples.ipynb  fit.py  fit_1d.py  fit_2d.py  fit_example.py  fit_toydataset1-1d.py  fit_toydataset3b-2d.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
colab_demo/: colab_demo.ipynb  symbolfit_colab.ipynb
docs/: citation.md  citation.rst  class.md  class.rst  conf.py  configuration.rst  custom.css  demo.md  demo.rst  index.md  index.rst  install.md  install.rst  installation.rst  overview.md  overview.rst  quick_start.md  quick_start.rst  requirements.txt  style.css  tuning.rst
docs/_static/: custom.css
docs/demo/: asymptotic.rst  dijet.md  dijet.rst  dijet_blinded.md  dijet_blinded.rst  dijet_template_spec.md  dijet_template_spec.rst  dimuon.rst  diphoton.rst  extrapolation_sparse2d.md  extrapolation_sparse2d.rst  input.md  input.rst  monotonic.rst  paired_dijet.rst  pysr_configs.md  pysr_configs.rst  smooth_hist.rst  smooth_scale_factors.rst  toy1.md  toy1.rst  toy2.rst  toy2a.md  toy2a.rst  toy3.rst  toy3c.md  toy3c.rst  trijet.rst
docs/demo/notebooks/: Toy_dataset_1.ipynb  Toy_dataset_1.rst  Toy_dataset_2.ipynb  Toy_dataset_2a.ipynb  Toy_dataset_2a.rst  Toy_dataset_3.ipynb  Toy_dataset_3c.ipynb  Toy_dataset_3c.rst  dijet.ipynb  dijet.rst  dijet_blinded.ipynb  dijet_blinded.rst  dijet_pair.ipynb  dijet_pair.rst  dijet_template_spec.ipynb  dijet_template_spec.rst  dimuon.ipynb  dimuon.rst  diphoton.ipynb  diphoton.rst  toy_dataset_1.ipynb  trijet.ipynb  trijet.rst
examples/common_pysr_configs/: pysr_config_1.py  pysr_config_2.py
examples/datasets/dijet/: dataset.py  dataset_blinded.py  dataset_mask.py
examples/dijet/: dataset.py  dataset_mask.py
examples/dimuon/: dataset_mask.py  pysr_config.py
examples/diphoton/: dataset_mask.py
examples/pysr_configs/: pysr_config_2.py  pysr_config_gauss.py  pysr_config_nogauss.py  pysr_config_template_spec_dijet.py
examples/toy_dataset_1/: dataset.py  pysr_config.py
examples/toy_dataset_2/: dataset_a.py  dataset_b.py  dataset_c.py  pysr_config.py
examples/toy_dataset_3/: dataset_3b.py
examples/trijet/: dataset_mask.py
symbolfit/: evaluate.py  math_defs.py  plotting.py  processing.py  symbolfit.py  utils.py
tests/: test_fit.py
(+86 files in other folders)
