[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "UP",
]
ignore = [
    "E402",
    "F403",
    "F405",
]

[tool.ruff.lint.isort]
known-first-party = ["symbolfit"]
