[metadata]
name = symbolfit
version = 0.1.0
description = Automatic parametric modeling with symbolic regression
author = Ho Fung Tsoi
author_email = ho.fung.tsoi@cern.ch
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hftsoi/symbolfit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pysr
    lmfit
    matplotlib
    seaborn
    numpy<2.0.0
include_package_data = True
