[metadata]
name = symbolfit
version = 0.2.1
description = Automatic parametric modeling with symbolic regression
author = Ho Fung Tsoi
author_email = ho.fung.tsoi@cern.ch
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hftsoi/symbolfit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    pysr>=1.5.0,<=1.5.2
    lmfit>=1.3.0,<1.4.0
    matplotlib>=3.10.0,<4.0.0
    seaborn>=0.13.0,<0.14.0
    numpy>=2.0.0,<2.3.0
include_package_data = True

[options.package_data]
symbolfit = img/logo.png
